| Summary: | ASTERISK-25964: Outbound registrations created via ARI/push configuration do not clean up outbound registrations currently in flight | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2016-04-26 09:28:45 | Date Closed: | 2016-05-17 12:29:08 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari Resources/res_pjsip_outbound_registration |
| Versions: | 13.8.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When an outbound registration is created via ARI push configuration and then later removed via a corresponding DELETE, there is a case where the outbound registration will continue to exist. This primarily occurs when the outbound registration was initially rejected and is in a pending retry loop.
When this occurs, you'll see the following NOTICE/WARNING messages constantly: {noformat} [Apr 26 14:15:17] NOTICE[21981]: res_pjsip/pjsip_configuration.c:2163 ast_sip_retrieve_auths: Couldn't find auth '22eba667-cc63-4196-b318-dc38a33d4b31'. Cannot authenticate [Apr 26 14:15:17] WARNING[21981]: res_pjsip_outbound_authenticator_digest.c:117 digest_create_request_with_auth_from_old: Failed to set authentication credentials [Apr 26 14:15:17] WARNING[21981]: res_pjsip_outbound_registration.c:802 handle_registration_response: Failed to create authenticated REGISTER request to server 'sip:xxx:5060' from client 'sip:xxx' [Apr 26 14:15:17] WARNING[21981]: res_pjsip_outbound_registration.c:747 schedule_retry: Temporal response '401' received from 'sip:xxx' on registration attempt to 'sip:xxx', retrying in '60' {noformat} | ||
| Comments: | |||